src/objects/AccountSponsor__c.object
<CustomObject>
    <description>Junction object to link accounts with campaigns (sponsors)</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account associated with the given campaign.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>AccountSponsors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>The sponsor associated with the given account.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountSponsors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency (hourly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Sponsor</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sponsors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>